--- a/index.html
+++ b/index.html
@@ -10,21 +10,28 @@
 </head>
 <body>
     <div class="container-md">
-        <div class="one">
-            <img src="assets/BeautyPlus_20210627174915901_save.jpg" height="100%" width="100%">
-            <p>
-             
-            </p>
+        <div class="container">
+            <img src="assets/BeautyPlus_20210627174915901_save.jpg" alt="" style="width:100%;">
+            <div class="bottom-left">
+                <h1>FREDRICK GACHURU MWANGI!</h1>
+               <p>
+                  <ul>
+                      <li>SOFTWARE DEVELOPER</li>
+                      <li>GRAPHIC DESIGNER</li>
+                   </ul>
+               </p>
+            </div>
         </div>
     </div>
+    <br>
     <div class="resume">
             <div class="container">
               <div class="title">
-                <h2>Resume</h2>
+                <h2>RESUME</h2>
               </div>
               <div class="row">
                 <div class="col-lg-6">
-                  <h3 class="resume-title">Sumary</h3>
+                  <h3 class="resume-title">Summary</h3>
                   <div class="resume-item pb-0">
                     <h4>Fredrick Gachuru Mwangi</h4>
                     <ul>
@@ -75,6 +82,8 @@
                       <li>Lorem ipsum dolor sit amet.</li>
                     </ul>
                     </p>
+                    <h3>HOBBIES</h3>
+                    <h5></h5>
                   </div>
                 </div>
               </div>
@@ -82,6 +91,7 @@
     </div>
     <br>
     <div class="container-md">
+        <h1>PROJECTS</h1>
         <div class="row">
             <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
                 <div class="card-header">Header</div>
