--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
               <div class="title">
                 <h2>RESUME</h2>
               </div>
+              <div>
+                  <img src="assets/IMG_20200918_093338.jpg" width="100%">
+              </div>
               <div class="row">
                 <div class="col-lg-6">
                   <h3 class="resume-title">Summary</h3>
