--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
         </div>
     </div>
     <br>
+    <div class="container">
+        <div class="title">
+            <h2>ABOUT ME</h2>
+        </div>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ut repellat veritatis neque nisi a fugit aliquam pariatur nemo cum modi sit nostrum minima omnis optio officiis fugiat, aspernatur totam magni molestiae debitis mollitia illum eaque blanditiis. Magni qui praesentium culpa laborum iste reprehenderit officia dicta vero aspernatur, mollitia, doloremque voluptatum tempora! Exercitationem et voluptatem animi, quibusdam impedit, cumque eum vitae nihil error eveniet recusandae qui quisquam alias fugit pariatur nemo unde placeat. Iusto perferendis fuga voluptatem nostrum est? Reprehenderit consequuntur ea quod magnam ducimus tempora, odit ipsam, dolore nulla fugiat dolor possimus nostrum. Sint autem est natus cumque laboriosam!
+        </p>
+    </div>
     <div class="resume">
             <div class="container">
               <div class="title">
@@ -37,12 +45,13 @@
                   <h3 class="resume-title">Summary</h3>
                   <div class="resume-item pb-0">
                     <h4>Fredrick Gachuru Mwangi</h4>
+                 <p>
                     <ul>
                       <li><strong>residence - </strong><em>NAIROBI, KENYA</em></li>
                       <li><strong>contacts - </strong><em>+254-758990984/+254-757262938 </em></li>
                       <li><strong>email - </strong><em>fredrickgachuru73@gmail.com </em></li>
                     </ul>
-                    </p>
+                 </p>
                   </div>
         
                   <h3 class="resume-title">Education</h3>
