--- a/index.html
+++ b/index.html
@@ -106,10 +106,12 @@
         <h1>PROJECTS</h1>
         <div class="row">
             <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
+              <img src="assets/InShot_20190819_082220873-1.jpg" class="card-img-top" alt="ethics">
                 <div class="card-header">Header</div>
                 <div class="card-body">
                   <h5 class="card-title">Primary card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="https://fredrick-01.github.io/ethic_entertainment/" class="btn btn-warning">link</a>
                 </div>
               </div>
               <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
@@ -129,6 +131,14 @@
               </div> 
         </div>
     </div>
-    
+    <div class="container">
+        <div>
+            <footer>
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-facebook" viewBox="0 0 15 20">
+                    <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
+                  </svg>
+            </footer>
+        </div>
+    </div>
    </body>
 </html>
