Added an image and a link to the second card

--- a/index.html
+++ b/index.html
@@ -115,10 +115,12 @@
                 </div>
               </div>
               <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
+                <img src="assets/Screenshot from 2021-07-08 15-29-22.png" class="btn btn-secondary" alt="Anita's Kitchen"> 
                 <div class="card-header">Header</div>
                 <div class="card-body">
                   <h5 class="card-title">Secondary card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="https://fredrick-01.github.io/Anitas-kitchen/" class="btn btn-warning">ANITA'S KITCHEN</a>
                 </div>
               </div>
               <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
