Added a footer and placed the project container in a column layout

--- a/index.html
+++ b/index.html
@@ -24,18 +24,10 @@
         </div>
     </div>
     <br>
-    <div class="container">
-        <div class="title">
-            <h2>ABOUT ME</h2>
-        </div>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ut repellat veritatis neque nisi a fugit aliquam pariatur nemo cum modi sit nostrum minima omnis optio officiis fugiat, aspernatur totam magni molestiae debitis mollitia illum eaque blanditiis. Magni qui praesentium culpa laborum iste reprehenderit officia dicta vero aspernatur, mollitia, doloremque voluptatum tempora! Exercitationem et voluptatem animi, quibusdam impedit, cumque eum vitae nihil error eveniet recusandae qui quisquam alias fugit pariatur nemo unde placeat. Iusto perferendis fuga voluptatem nostrum est? Reprehenderit consequuntur ea quod magnam ducimus tempora, odit ipsam, dolore nulla fugiat dolor possimus nostrum. Sint autem est natus cumque laboriosam!
-        </p>
-    </div>
-    <div class="resume">
+      <div class="resume">
             <div class="container">
               <div class="title">
-                <h2>RESUME</h2>
+                <h2>ABOUT ME</h2>
               </div>
               <div>
                   <img src="assets/IMG_20200918_093338.jpg" width="100%">
@@ -102,45 +94,63 @@
             </div>
     </div>
     <br>
+    
     <div class="container-md">
         <h1>PROJECTS</h1>
-        <div class="row">
+        <div class="col">
             <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
-              <img src="assets/InShot_20190819_082220873-1.jpg" class="card-img-top" alt="ethics">
                 <div class="card-header">Header</div>
+                <img src="assets/InShot_20190819_082220873-1.jpg" class="card-img-top" alt="ethics">
                 <div class="card-body">
                   <h5 class="card-title">Primary card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="https://fredrick-01.github.io/ethic_entertainment/" class="btn btn-warning">link</a>
+                  <a href="https://fredrick-01.github.io/ethic_entertainment/" class="btn btn-warning">VIEW</a>
                 </div>
               </div>
               <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
-                <img src="assets/Screenshot from 2021-07-08 15-29-22.png" class="btn btn-secondary" alt="Anita's Kitchen"> 
                 <div class="card-header">Header</div>
+                <img src="assets/Screenshot from 2021-07-08 15-29-22.png" class="btn btn-secondary" alt="Anita's Kitchen"> 
                 <div class="card-body">
                   <h5 class="card-title">Secondary card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="https://fredrick-01.github.io/Anitas-kitchen/" class="btn btn-warning">ANITA'S KITCHEN</a>
+                  <a href="https://fredrick-01.github.io/Anitas-kitchen/" class="btn btn-danger">VIEW</a>
                 </div>
               </div>
               <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
                 <div class="card-header">Header</div>
+                <img src="assets/unnamed.jpg" class="card-img-top" alt="Anita's Kitchen"> 
                 <div class="card-body">
                   <h5 class="card-title">Success card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="https://fredrick-01.github.io/My-Favourite-Band/" class="btn btn-primary">VIEW</a>
                 </div>
               </div>
               </div> 
         </div>
     </div>
-    <div class="container">
-        <div>
-            <footer>
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-facebook" viewBox="0 0 15 20">
-                    <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
-                  </svg>
-            </footer>
-        </div>
-    </div>
+    <div class="container-md">
+      <div class="footer">
+        <div class="row text-center">
+            <div class="col-md-3">
+              <H3>FACEBOOK</H3>
+                <a href="https://www.facebook.com/profile.php?id=100069415844257">facebook</a>
+            </div>
+           <div class="col-md-3">
+            <h3>INSTAGRAM</h3>
+            <a href="https://www.instagram.com/freddieofficial_254/">Instagram</a>
+           </div>
+           <div class="col-md-3">
+            <h3>TWITTER</h3>
+            <a href="https://twitter.com/Freddie2549">twitter</a>
+           </div>
+           <div class="col-md-3">
+             <h3>Contacts</h3>
+             <p>+254-757262938/ +254-758990984</p>
+            <h3>email</h3>
+            <p>fredrickgachuru73@gmail.com</p>
+           </div>
+         </div>
+     </div>
+  </div>
    </body>
 </html>
