added a facebook icon in the footer

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
         <div class="row text-center">
             <div class="col-md-3">
               <H3>FACEBOOK</H3>
+              <img src="assets/facebook_icon_130940.png" height="20px">
                 <a href="https://www.facebook.com/profile.php?id=100069415844257">facebook</a>
             </div>
            <div class="col-md-3">
