added an instagram icon in the footer

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             </div>
            <div class="col-md-3">
             <h3>INSTAGRAM</h3>
+            <img src="assets/1025px-Instagram-Icon.png" height="20px">
             <a href="https://www.instagram.com/freddieofficial_254/">Instagram</a>
            </div>
            <div class="col-md-3">
