--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
            </div>
            <div class="col-md-3">
             <h3>TWITTER</h3>
+            <img src="assets/download.png" height="20px">
             <a href="https://twitter.com/Freddie2549">twitter</a>
            </div>
            <div class="col-md-3">
