added an email icon and alighned the email container in line with the rest

--- a/index.html
+++ b/index.html
@@ -131,25 +131,29 @@
     <div class="container-md">
       <div class="footer">
         <div class="row text-center">
-            <div class="col-md-3">
+            <div class="col-md-2">
               <H3>FACEBOOK</H3>
               <img src="assets/facebook_icon_130940.png" height="20px">
                 <a href="https://www.facebook.com/profile.php?id=100069415844257">facebook</a>
             </div>
-           <div class="col-md-3">
+           <div class="col-md-2">
             <h3>INSTAGRAM</h3>
             <img src="assets/1025px-Instagram-Icon.png" height="20px">
             <a href="https://www.instagram.com/freddieofficial_254/">Instagram</a>
            </div>
-           <div class="col-md-3">
+           <div class="col-md-2">
             <h3>TWITTER</h3>
             <img src="assets/download.png" height="20px">
             <a href="https://twitter.com/Freddie2549">twitter</a>
            </div>
-           <div class="col-md-3">
+           <div class="col-md-2">
              <h3>Contacts</h3>
-             <p>+254-757262938/ +254-758990984</p>
-            <h3>email</h3>
+             <img src="assets/134-1341998_contact-icon-images-hd-hd-png-download.png" height="30px">
+             <p>+254-757262938 <br>+254-758990984</p>
+           </div>
+           <div class="col-md-2">
+            <h3>Email address</h3>
+            <img src="assets/7969340901574338609-512.png" height="20px">
             <p>fredrickgachuru73@gmail.com</p>
            </div>
          </div>
