named the footer container

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
     <div class="container-md">
       <div class="footer">
         <div class="row text-center">
+          <h1>SOCIAL HUNDLES</h1>
             <div class="col-md-2">
               <H3>FACEBOOK</H3>
               <img src="assets/facebook_icon_130940.png" height="20px">
