added an age in the summary part

--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
                     <h4>Fredrick Gachuru Mwangi</h4>
                  <p>
                     <ul>
-                      <li><strong>residence - </strong><em>NAIROBI, KENYA</em></li>
-                      <li><strong>contacts - </strong><em>+254-758990984/+254-757262938 </em></li>
-                      <li><strong>email - </strong><em>fredrickgachuru73@gmail.com </em></li>
+                      <li><strong>Residence - </strong><em>NAIROBI, KENYA</em></li>
+                      <li><strong>Contacts - </strong><em>+254-758990984/+254-757262938 </em></li>
+                      <li><strong>Email - </strong><em>fredrickgachuru73@gmail.com </em></li>
+                      <li><strong>Age - </strong><em>21years</em></li>
                     </ul>
                  </p>
                   </div>
