added actualcontent in the about section

--- a/index.html
+++ b/index.html
@@ -46,31 +46,30 @@
                     </ul>
                  </p>
                   </div>
-        
                   <h3 class="resume-title">Education</h3>
                   <div class="resume-item">
                     <h4>SOFTWARE DEVELOPMENT</h4>
-                    <h5>2021</h5>
+                    <h5>2021 - Present</h5>
                     <p><em>MORINGA SCHOOL </em></p>
-                    <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+                    <p> Joined Moringa School in 2021 to study Software Development. Still a student there</p>
                   </div>
                   <div class="resume-item">
                     <h4>GRAPHICS DESIGN</h4>
                     <h5>2019 - 2020</h5>
                     <p><em>WEBBS INSTITUTE, NAIROBI</em></p>
-                    <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+                    <p>Joined WEBBS INSTITUTE on 21st March 2019 to pursue GRAPHICS DESIGN,where I learnt all the designs and was able to customize some designs. Graduated in NOVEMBER 2020</p>
                   </div>
                   <div class="resume-item">
                     <h4>HIGH SCHOOL</h4>
                     <h5>2015 - 2018</h5>
                     <p><em>RUMURUTI HIGH SCHOOL</em></p>
-                    <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+                    <p>After succesfully completing my primary school, I joined RUMURUTI HIGH SCHOOL located in the proposed County HQ for Laikipia County whee I studied for four years. from  2015 t0 2018  </p>
                   </div>
                   <div class="resume-item">
                     <h4>PRIMARY SCHOOL</h4>
                     <h5>2007 - 2014</h5>
                     <p><em>STAREHE PRIMARY</em></p>
-                    <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+                    <p>Joined primary school in the year 2007  and studied for eight years.</p>
                   </div>
                 </div>
                 <div class="col-lg-6">
@@ -81,10 +80,10 @@
                     <p><em>NAIROBI, KENYA</em></p>
                     <p>
                     <ul>
-                      <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                      <li>Lorem ipsum dolor sit amet consectetur.</li>
-                      <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam, modi!</li>
-                      <li>Lorem ipsum dolor sit amet.</li>
+                      <li>Am able to design logo's of all kinds</li>
+                      <li>Am a perfect photo manipulator</li>
+                      <li>Am also a Proffesional Brand designer </li>
+                      <li>Am a Proffesional advertisment designer</li>
                     </ul>
                     </p>
                     <h3>HOBBIES</h3>
