--- a/index.html
+++ b/index.html
@@ -87,7 +87,16 @@
                     </ul>
                     </p>
                     <h3>HOBBIES</h3>
-                    <h5></h5>
+                    <p>
+                      <ol>
+                        <li>A poet</li>
+                        <li>listening to music</li>
+                        <li>Going for retreats</li>
+                        <li>Making new designs</li>
+                        <li>Leaning new styles in codding</li>
+                        <li>Creating Websites</li>
+                      </ol>
+                    </p>
                   </div>
                 </div>
               </div>
