added a BEST SONGS container and rectified a hobby

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <h3>HOBBIES</h3>
                     <p>
                       <ol>
-                        <li>A poet</li>
+                        <li>Writting poems</li>
                         <li>listening to music</li>
                         <li>Going for retreats</li>
                         <li>Making new designs</li>
@@ -97,6 +97,13 @@
                         <li>Creating Websites</li>
                       </ol>
                     </p>
+                    <h3>BEST SONGS</h3>
+                    <ol>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                    </ol>
                   </div>
                 </div>
               </div>
