--- a/index.html
+++ b/index.html
@@ -99,7 +99,12 @@
                     </p>
                     <h3>BEST SONGS</h3>
                     <ol>
-                      <li></li>
+                      <li>
+                        <video height="20%" width="40%" controls>
+                          <source src="assets/bebe_rexha_sacrifice_official_music_video_h264_49173.mp4" type="video/mp4">
+                        </video>
+                        <p><em>SACRIFICE BY <strong>BEBE REXHA</strong></em></p>
+                      </li>
                       <li></li>
                       <li></li>
                       <li></li>
