added a video and its description

--- a/index.html
+++ b/index.html
@@ -105,7 +105,12 @@
                         </video>
                         <p><em>SACRIFICE BY <strong>BEBE REXHA</strong></em></p>
                       </li>
-                      <li></li>
+                      <li>
+                        <video height="20%" width="40%" controls>
+                          <source src="assets/faouzia_john_legend_minefields_official_music_video_h264_49415.mp4" type="video/mp4">
+                        </video>
+                        <p><em>MINEFIELDS BY <strong>FAOUZIA FT JOHN LEDGED</strong></em></p>
+                      </li>
                       <li></li>
                       <li></li>
                     </ol>
