added a video and its description

--- a/index.html
+++ b/index.html
@@ -111,8 +111,12 @@
                         </video>
                         <p><em>MINEFIELDS BY <strong>FAOUZIA FT JOHN LEDGED</strong></em></p>
                       </li>
-                      <li></li>
-                      <li></li>
+                      <li>
+                        <video height="20%" width="40%" controls>
+                          <source src="assets/martin_garrix_dua_lipa_scared_to_be_lonely_official_video_h264_49815.mp4" type="video/mp4">
+                        </video>
+                        <p><em>SCARED TO BE LONELY BY <strong>MARTIN GARRIX FT DUA LIPA</strong></em></p>
+                      </li>
                     </ol>
                   </div>
                 </div>
