added content in the first card in projects

--- a/index.html
+++ b/index.html
@@ -129,11 +129,17 @@
         <h1>PROJECTS</h1>
         <div class="col">
             <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
-                <div class="card-header">Header</div>
+                <div class="card-header">ETHIC ENTERTAINMENT</div>
                 <img src="assets/InShot_20190819_082220873-1.jpg" class="card-img-top" alt="ethics">
                 <div class="card-body">
-                  <h5 class="card-title">Primary card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h5 class="card-title">A TRIAL PROJECT</h5>
+                  <p class="card-text">The aim of the project was to try and fix different styles on the page and to try out some designs and layouts.
+                    the project used the following languages:
+                    <ol>
+                      <li>HTML - for content placement</li>
+                      <li>CSS - for styling</li>
+                    </ol>
+                  </p>
                   <a href="https://fredrick-01.github.io/ethic_entertainment/" class="btn btn-warning">VIEW</a>
                 </div>
               </div>
