--- a/index.html
+++ b/index.html
@@ -144,11 +144,17 @@
                 </div>
               </div>
               <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
-                <div class="card-header">Header</div>
+                <div class="card-header"><strong><em>ANITA'S KITCHEN</em></strong></div>
                 <img src="assets/Screenshot from 2021-07-08 15-29-22.png" class="btn btn-secondary" alt="Anita's Kitchen"> 
                 <div class="card-body">
-                  <h5 class="card-title">Secondary card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h5 class="card-title">A RESTAURANT WEBSITE</h5>
+                  <p class="card-text">The project is basically a website for ANITA'S KITCHEN, where a customer doesn't have to be physically be in the Kitchen to see what is offered there.<br>
+                    The languages used are:
+                    <ol>
+                      <li>HTML - for content placement</li>
+                      <li>CSS - for styling</li>
+                    </ol>
+                  </p>
                   <a href="https://fredrick-01.github.io/Anitas-kitchen/" class="btn btn-danger">VIEW</a>
                 </div>
               </div>
