--- a/index.html
+++ b/index.html
@@ -159,11 +159,17 @@
                 </div>
               </div>
               <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
-                <div class="card-header">Header</div>
+                <div class="card-header"><strong><em>THE SAUTI SOL</em></strong></div>
                 <img src="assets/unnamed.jpg" class="card-img-top" alt="Anita's Kitchen"> 
                 <div class="card-body">
-                  <h5 class="card-title">Success card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h5 class="card-title">MY FAVOURITE BAND</h5>
+                  <p class="card-text">The project is a simple website of THE SAUTI SOL BAND<br>
+                    The project used the following languages:
+                    <ol>
+                      <li>HTML - for content placement</li>
+                      <li>CSS - for styling</li>
+                    </ol>          
+                  </p>
                   <a href="https://fredrick-01.github.io/My-Favourite-Band/" class="btn btn-primary">VIEW</a>
                 </div>
               </div>
