added a gif at the end of the page

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <h1>PROJECTS</h1>
         <div class="col">
             <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
-                <div class="card-header">ETHIC ENTERTAINMENT</div>
+                <div class="card-header"><strong><em>ETHIC ENTERTAINMENT</em></strong></div>
                 <img src="assets/InShot_20190819_082220873-1.jpg" class="card-img-top" alt="ethics">
                 <div class="card-body">
                   <h5 class="card-title">A TRIAL PROJECT</h5>
@@ -205,6 +205,7 @@
             <img src="assets/7969340901574338609-512.png" height="20px">
             <p>fredrickgachuru73@gmail.com</p>
            </div>
+           <img src="https://media.giphy.com/media/21HtXqCprrU7Xsr0qo/giphy.gif" height="300px">
          </div>
      </div>
   </div>
